--- a/css/index.css
+++ b/css/index.css
@@ -4,8 +4,8 @@
 
 .version.index /* version checker */
 {
-	color: #00000E;
-	background-color: #EA5DD0;
+	color: #000000;
+	background-color: #7108FC;
 }
 
 .html
@@ -31,87 +31,81 @@
 	width: 0.01px;
 }
 
+#u316
+{
+	z-index: 41;
+	height: 100px;
+}
+
+.ie #u316
+{
+	background-color: #FFFFFF;
+	opacity: 0.01;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";
+	filter: alpha(opacity=1);
+}
+
+#u316-bw
+{
+	z-index: 41;
+	height: 100px;
+}
+
+#u402
+{
+	z-index: 61;
+	min-height: 68px;
+	background-color: #FFFFFF;
+	padding-bottom: 32px;
+}
+
 #u209
 {
-	z-index: 8;
+	z-index: 66;
 	width: 264px;
 	background-color: transparent;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 30px;
-	left: 120px;
-}
-
-#u316
-{
-	z-index: 43;
-	min-height: 68px;
-	background-color: transparent;
-	padding-bottom: 32px;
+	left: 200px;
 }
 
 #u353-4
 {
-	z-index: 64;
+	z-index: 62;
 	width: 180px;
 	min-height: 25px;
 	background-color: transparent;
-	color: #3D71BD;
+	line-height: 19px;
 	font-size: 16px;
 	text-align: center;
-	line-height: 19px;
+	color: #3D71BD;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 43px;
 	left: 820px;
 }
 
-#u316-bw
+#u402-bw
 {
-	z-index: 43;
+	z-index: 61;
 	min-height: 68px;
 }
 
-#pu209,#pu315
+#u219
 {
-	width: 0.01px;
-	margin-left: -100px;
-}
-
-#u315
-{
-	z-index: 2;
-	min-height: 377px;
-	padding-bottom: 223px;
-	background: #7F7F7F url("../images/127558.jpg") no-repeat left top;
-	background-size: cover;
-}
-
-#u314-6
-{
-	z-index: 10;
-	width: 380px;
-	min-height: 130px;
+	z-index: 27;
+	width: 239px;
 	background-color: transparent;
-	color: #000000;
-	font-family: '__Textbook New_5';
-	font-weight: 400;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 247px;
-	left: 200px;
-}
-
-#u315-bw
-{
-	z-index: 2;
-	min-height: 377px;
-	margin-top: 560px;
+	position: fixed;
+	top: 92px;
+	left: 50%;
+	margin-left: 170px;
 }
 
 #u321
 {
-	z-index: 32;
+	z-index: 30;
 	min-height: 580px;
 	background: transparent url("../images/bg.jpg") no-repeat center center;
 	background-size: cover;
@@ -124,15 +118,15 @@
 	width: 980px;
 	position: relative;
 	left: -100px;
-	padding-top: 165px;
-	padding-bottom: 155px;
+	padding-top: 135px;
+	padding-bottom: 185px;
 }
 
 #u230-8
 {
-	z-index: 33;
-	width: 380px;
-	min-height: 180px;
+	z-index: 31;
+	width: 460px;
+	min-height: 190px;
 	background-color: transparent;
 	color: #FFFFFF;
 	font-family: '__Textbook New_5';
@@ -143,21 +137,28 @@
 
 #u230-2
 {
-	font-size: 36px;
-	line-height: 43px;
+	font-size: 48px;
+	line-height: 58px;
+}
+
+#u230-4
+{
+	font-size: 48px;
+	line-height: 58px;
+	padding-bottom: 20px;
 }
 
 #pu254
 {
 	width: 0.01px;
 	left: 200px;
-	margin-top: 30px;
+	margin-top: 20px;
 	position: relative;
 }
 
 #u254
 {
-	z-index: 41;
+	z-index: 39;
 	width: 170px;
 	height: 50px;
 	position: relative;
@@ -188,7 +189,7 @@
 
 #u286
 {
-	z-index: 42;
+	z-index: 40;
 	width: 200px;
 	height: 50px;
 	position: relative;
@@ -220,8 +221,63 @@
 
 #u321-bw
 {
-	z-index: 32;
+	z-index: 30;
 	min-height: 580px;
+}
+
+#u225
+{
+	z-index: 29;
+	width: 220px;
+	height: 390px;
+	background-color: transparent;
+	position: fixed;
+	top: 132px;
+	left: 50%;
+	margin-left: 180px;
+}
+
+#U398_animation
+{
+	width: 220px;
+	height: 390px;
+	border: none;
+}
+
+#pu316,#pu315
+{
+	width: 0.01px;
+	margin-left: -100px;
+}
+
+#u315
+{
+	z-index: 2;
+	min-height: 357px;
+	padding-bottom: 243px;
+	background: #7F7F7F url("../images/127558.jpg") no-repeat left top;
+	background-size: cover;
+}
+
+#u314-6
+{
+	z-index: 8;
+	width: 380px;
+	min-height: 100px;
+	background-color: transparent;
+	color: #000000;
+	font-family: '__Textbook New_5';
+	font-weight: 400;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 257px;
+	left: 200px;
+}
+
+#u315-bw
+{
+	z-index: 2;
+	min-height: 357px;
 }
 
 #second
@@ -229,46 +285,7 @@
 	position: relative;
 	width: 22px;
 	margin-right: -10000px;
-	margin-top: 580px;
 	left: 478px;
-}
-
-#pu219
-{
-	width: 0.01px;
-	padding-bottom: 474px;
-	margin-left: 660px;
-	margin-top: -1148px;
-}
-
-#u219
-{
-	z-index: 29;
-	width: 239px;
-	background-color: transparent;
-	position: fixed;
-	top: 112px;
-	left: 50%;
-	margin-left: 170px;
-}
-
-#u225
-{
-	z-index: 31;
-	width: 220px;
-	height: 390px;
-	background-color: transparent;
-	position: fixed;
-	top: 152px;
-	left: 50%;
-	margin-left: 180px;
-}
-
-#U371_animation
-{
-	width: 220px;
-	height: 390px;
-	border: none;
 }
 
 #u319-4
@@ -277,19 +294,14 @@
 	width: 300px;
 	min-height: 151px;
 	background-color: transparent;
-	color: #000000;
-	font-size: 36px;
 	line-height: 43px;
+	font-size: 36px;
+	color: #000000;
 	font-family: '__Textbook New_5';
 	font-weight: 400;
 	margin-left: 100px;
-	margin-top: 264px;
+	margin-top: 244px;
 	position: relative;
-}
-
-#u319-2
-{
-	padding-bottom: 20px;
 }
 
 #u318
@@ -303,8 +315,8 @@
 
 #u320-6
 {
-	z-index: 44;
-	width: 380px;
+	z-index: 42;
+	width: 300px;
 	min-height: 173px;
 	background-color: transparent;
 	color: #000000;
@@ -323,35 +335,42 @@
 	margin-top: 220px;
 }
 
-#u333-5
+#u333-4
 {
-	z-index: 55;
+	z-index: 53;
 	width: 380px;
-	min-height: 203px;
+	min-height: 110px;
 	background-color: transparent;
+	line-height: 43px;
+	font-size: 36px;
 	color: #000000;
 	font-family: '__Textbook New_5';
 	font-weight: 400;
 	margin-left: 100px;
-	margin-top: 216px;
+	margin-top: 264px;
 	position: relative;
+}
+
+#u319-2,#u333-2
+{
+	padding-bottom: 20px;
 }
 
 #pu329-6
 {
 	width: 0.01px;
 	margin-left: -100px;
-	margin-top: 207px;
+	margin-top: 252px;
 }
 
 #u329-6
 {
-	z-index: 16;
+	z-index: 14;
 	width: 500px;
 	min-height: 130px;
 	background-color: transparent;
-	color: #000000;
 	text-align: left;
+	color: #000000;
 	font-family: '__Textbook New_5';
 	font-weight: 400;
 	position: relative;
@@ -362,14 +381,14 @@
 
 #u328
 {
-	z-index: 22;
-	min-height: 371px;
-	padding-bottom: 249px;
+	z-index: 20;
+	min-height: 392px;
+	padding-bottom: 228px;
 	background: #7F7F7F url("../images/127558.jpg") no-repeat center center;
 	background-size: cover;
 }
 
-#u316_align_to_page,#u315_align_to_page,#u318_align_to_page,#u328_align_to_page
+#u402_align_to_page,#u315_align_to_page,#u318_align_to_page,#u328_align_to_page
 {
 	margin-left: auto;
 	margin-right: auto;
@@ -380,27 +399,27 @@
 
 #u334-6
 {
-	z-index: 23;
-	width: 380px;
-	min-height: 150px;
+	z-index: 21;
+	width: 325px;
+	min-height: 183px;
 	background-color: transparent;
 	color: #000000;
 	font-family: '__Textbook New_5';
 	font-weight: 400;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 199px;
+	margin-top: 209px;
 	left: 200px;
 }
 
-#u314-2,#u230-4,#u320-2,#u333-2,#u329-2,#u334-2
+#u314-2,#u320-2,#u329-2,#u334-2
 {
 	font-size: 36px;
 	line-height: 43px;
 	padding-bottom: 20px;
 }
 
-#u314-4,#u230-6,#u320-4,#u333-3,#u329-4,#u334-4
+#u230-6,#u314-4,#u320-4,#u329-4,#u334-4
 {
 	font-size: 18px;
 	line-height: 22px;
@@ -408,13 +427,13 @@
 
 #u328-bw
 {
-	z-index: 22;
-	min-height: 371px;
+	z-index: 20;
+	min-height: 392px;
 }
 
 #u330
 {
-	z-index: 50;
+	z-index: 48;
 	min-height: 639.9500000000057px;
 	background-color: #FFFFFF;
 	padding-bottom: 0px;
@@ -427,20 +446,20 @@
 	width: 980px;
 	position: relative;
 	left: -100px;
-	padding-top: 113px;
+	padding-top: 93px;
 	padding-bottom: 4px;
 }
 
 #u331-4
 {
-	z-index: 51;
+	z-index: 49;
 	width: 500px;
 	min-height: 60px;
 	background-color: transparent;
 	line-height: 43px;
-	color: #000000;
 	font-size: 36px;
 	text-align: center;
+	color: #000000;
 	font-family: '__Textbook New_5';
 	font-weight: 400;
 	left: 340px;
@@ -449,27 +468,27 @@
 
 #u335
 {
-	z-index: 60;
+	z-index: 57;
 	width: 1012px;
 	background-color: transparent;
 	left: 84px;
-	margin-top: 83px;
+	margin-top: 13px;
 	position: relative;
 }
 
 #u347
 {
-	z-index: 62;
+	z-index: 59;
 	width: 955px;
 	background-color: transparent;
 	left: 112px;
-	margin-top: 71px;
+	margin-top: 161px;
 	position: relative;
 }
 
 #u330-bw
 {
-	z-index: 50;
+	z-index: 48;
 	min-height: 639.9500000000057px;
 }
 
