--- a/css/index.css
+++ b/css/index.css
@@ -4,8 +4,8 @@
 
 .version.index /* version checker */
 {
-	color: #000000;
-	background-color: #7108FC;
+	color: #0000FF;
+	background-color: #21BCF8;
 }
 
 .html
@@ -28,12 +28,25 @@
 
 #page_position_content
 {
+	margin-top: -18px;
 	width: 0.01px;
+}
+
+#first
+{
+	margin-left: 458px;
+	position: relative;
+}
+
+#pu316
+{
+	width: 0.01px;
+	margin-left: -257px;
 }
 
 #u316
 {
-	z-index: 41;
+	z-index: 32;
 	height: 100px;
 }
 
@@ -47,21 +60,21 @@
 
 #u316-bw
 {
-	z-index: 41;
+	z-index: 32;
 	height: 100px;
 }
 
 #u402
 {
-	z-index: 61;
+	z-index: 40;
 	min-height: 68px;
 	background-color: #FFFFFF;
-	padding-bottom: 32px;
+	padding-bottom: 612px;
 }
 
 #u209
 {
-	z-index: 66;
+	z-index: 57;
 	width: 264px;
 	background-color: transparent;
 	position: relative;
@@ -72,14 +85,14 @@
 
 #u353-4
 {
-	z-index: 62;
+	z-index: 53;
 	width: 180px;
 	min-height: 25px;
 	background-color: transparent;
-	line-height: 19px;
+	color: #3D71BD;
 	font-size: 16px;
 	text-align: center;
-	color: #3D71BD;
+	line-height: 19px;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 43px;
@@ -88,24 +101,26 @@
 
 #u402-bw
 {
-	z-index: 61;
+	z-index: 40;
 	min-height: 68px;
 }
 
-#u219
+#u409
 {
-	z-index: 27;
-	width: 239px;
+	z-index: 60;
+	width: 157px;
+	min-height: 136px;
+	border-style: none;
+	border-color: transparent;
 	background-color: transparent;
-	position: fixed;
-	top: 92px;
-	left: 50%;
-	margin-left: 170px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 522px;
 }
 
 #u321
 {
-	z-index: 30;
+	z-index: 67;
 	min-height: 580px;
 	background: transparent url("../images/bg.jpg") no-repeat center center;
 	background-size: cover;
@@ -118,13 +133,13 @@
 	width: 980px;
 	position: relative;
 	left: -100px;
-	padding-top: 135px;
-	padding-bottom: 185px;
+	padding-top: 155px;
+	padding-bottom: 165px;
 }
 
 #u230-8
 {
-	z-index: 31;
+	z-index: 68;
 	width: 460px;
 	min-height: 190px;
 	background-color: transparent;
@@ -158,7 +173,7 @@
 
 #u254
 {
-	z-index: 39;
+	z-index: 76;
 	width: 170px;
 	height: 50px;
 	position: relative;
@@ -189,7 +204,7 @@
 
 #u286
 {
-	z-index: 40;
+	z-index: 77;
 	width: 200px;
 	height: 50px;
 	position: relative;
@@ -221,13 +236,33 @@
 
 #u321-bw
 {
-	z-index: 30;
+	z-index: 67;
 	min-height: 580px;
+	margin-top: 100px;
+}
+
+#pu219
+{
+	width: 0.01px;
+	padding-bottom: 474px;
+	margin-left: 660px;
+	margin-top: -588px;
+}
+
+#u219
+{
+	z-index: 29;
+	width: 239px;
+	background-color: transparent;
+	position: fixed;
+	top: 92px;
+	left: 50%;
+	margin-left: 170px;
 }
 
 #u225
 {
-	z-index: 29;
+	z-index: 31;
 	width: 220px;
 	height: 390px;
 	background-color: transparent;
@@ -237,14 +272,14 @@
 	margin-left: 180px;
 }
 
-#U398_animation
+#U428_animation
 {
 	width: 220px;
 	height: 390px;
 	border: none;
 }
 
-#pu316,#pu315
+#pu315
 {
 	width: 0.01px;
 	margin-left: -100px;
@@ -261,7 +296,7 @@
 
 #u314-6
 {
-	z-index: 8;
+	z-index: 10;
 	width: 380px;
 	min-height: 100px;
 	background-color: transparent;
@@ -288,20 +323,31 @@
 	left: 478px;
 }
 
-#u319-4
+#third
+{
+	margin-left: 473px;
+	position: relative;
+}
+
+#u319-6
 {
 	z-index: 4;
 	width: 300px;
-	min-height: 151px;
+	min-height: 217px;
 	background-color: transparent;
-	line-height: 43px;
-	font-size: 36px;
 	color: #000000;
 	font-family: '__Textbook New_5';
 	font-weight: 400;
 	margin-left: 100px;
-	margin-top: 244px;
+	margin-top: 226px;
 	position: relative;
+}
+
+#u319-4
+{
+	font-size: 18px;
+	line-height: 22px;
+	padding-bottom: 20px;
 }
 
 #u318
@@ -315,7 +361,7 @@
 
 #u320-6
 {
-	z-index: 42;
+	z-index: 33;
 	width: 300px;
 	min-height: 173px;
 	background-color: transparent;
@@ -328,30 +374,44 @@
 	left: 200px;
 }
 
+#fourth
+{
+	position: relative;
+	width: 22px;
+	margin-right: -10000px;
+	left: 573px;
+}
+
 #u318-bw
 {
 	z-index: 3;
 	min-height: 421px;
-	margin-top: 220px;
+	margin-top: 154px;
+}
+
+#fifth
+{
+	margin-left: 461px;
+	position: relative;
 }
 
 #u333-4
 {
-	z-index: 53;
+	z-index: 45;
 	width: 380px;
 	min-height: 110px;
 	background-color: transparent;
-	line-height: 43px;
-	font-size: 36px;
 	color: #000000;
+	font-size: 36px;
+	line-height: 43px;
 	font-family: '__Textbook New_5';
 	font-weight: 400;
 	margin-left: 100px;
-	margin-top: 264px;
+	margin-top: 246px;
 	position: relative;
 }
 
-#u319-2,#u333-2
+#u333-2
 {
 	padding-bottom: 20px;
 }
@@ -365,12 +425,12 @@
 
 #u329-6
 {
-	z-index: 14;
+	z-index: 16;
 	width: 500px;
 	min-height: 130px;
 	background-color: transparent;
-	text-align: left;
 	color: #000000;
+	text-align: left;
 	font-family: '__Textbook New_5';
 	font-weight: 400;
 	position: relative;
@@ -381,25 +441,16 @@
 
 #u328
 {
-	z-index: 20;
+	z-index: 22;
 	min-height: 392px;
-	padding-bottom: 228px;
+	padding-bottom: 267px;
 	background: #7F7F7F url("../images/127558.jpg") no-repeat center center;
 	background-size: cover;
 }
 
-#u402_align_to_page,#u315_align_to_page,#u318_align_to_page,#u328_align_to_page
-{
-	margin-left: auto;
-	margin-right: auto;
-	width: 980px;
-	position: relative;
-	left: -100px;
-}
-
 #u334-6
 {
-	z-index: 21;
+	z-index: 23;
 	width: 325px;
 	min-height: 183px;
 	background-color: transparent;
@@ -412,7 +463,7 @@
 	left: 200px;
 }
 
-#u314-2,#u320-2,#u329-2,#u334-2
+#u314-2,#u319-2,#u320-2,#u329-2,#u334-2
 {
 	font-size: 36px;
 	line-height: 43px;
@@ -425,50 +476,68 @@
 	line-height: 22px;
 }
 
+#six
+{
+	position: relative;
+	width: 22px;
+	margin-right: -10000px;
+	left: 544px;
+}
+
 #u328-bw
 {
-	z-index: 20;
+	z-index: 22;
 	min-height: 392px;
 }
 
 #u330
 {
-	z-index: 48;
-	min-height: 639.9500000000057px;
+	z-index: 39;
+	min-height: 678.6000000000004px;
 	background-color: #FFFFFF;
 	padding-bottom: 0px;
 }
 
-#u330_align_to_page
+#u402_align_to_page,#u315_align_to_page,#u318_align_to_page,#u328_align_to_page,#u330_align_to_page
 {
 	margin-left: auto;
 	margin-right: auto;
 	width: 980px;
 	position: relative;
 	left: -100px;
-	padding-top: 93px;
-	padding-bottom: 4px;
+}
+
+#u330_position_content
+{
+	padding-bottom: 23px;
+}
+
+#seven
+{
+	left: 520px;
+	position: relative;
 }
 
 #u331-4
 {
-	z-index: 49;
+	z-index: 41;
 	width: 500px;
 	min-height: 60px;
 	background-color: transparent;
-	line-height: 43px;
+	color: #000000;
 	font-size: 36px;
 	text-align: center;
-	color: #000000;
+	line-height: 43px;
 	font-family: '__Textbook New_5';
 	font-weight: 400;
 	left: 340px;
+	margin-top: 75px;
 	position: relative;
 }
 
 #u335
 {
-	z-index: 57;
+	z-index: 49;
 	width: 1012px;
 	background-color: transparent;
 	left: 84px;
@@ -478,18 +547,18 @@
 
 #u347
 {
-	z-index: 59;
+	z-index: 51;
 	width: 955px;
 	background-color: transparent;
 	left: 112px;
-	margin-top: 161px;
+	margin-top: 181px;
 	position: relative;
 }
 
 #u330-bw
 {
-	z-index: 48;
-	min-height: 639.9500000000057px;
+	z-index: 39;
+	min-height: 678.6000000000004px;
 }
 
 @font-face
