--- a/css/index.css
+++ b/css/index.css
@@ -4,8 +4,8 @@
 
 .version.index /* version checker */
 {
-	color: #00000B;
-	background-color: #83AD31;
+	color: #0000E2;
+	background-color: #0FF8BB;
 }
 
 .html
@@ -272,7 +272,7 @@
 	margin-left: 180px;
 }
 
-#U432_animation
+#U460_animation
 {
 	width: 220px;
 	height: 390px;
