--- a/css/index.css
+++ b/css/index.css
@@ -4,8 +4,8 @@
 
 .version.index /* version checker */
 {
-	color: #0000F8;
-	background-color: #9626BA;
+	color: #0000FD;
+	background-color: #AA556F;
 }
 
 .html
@@ -63,10 +63,10 @@
 	width: 180px;
 	min-height: 25px;
 	background-color: transparent;
+	line-height: 19px;
 	color: #3D71BD;
 	font-size: 16px;
 	text-align: center;
-	line-height: 19px;
 	position: relative;
 	margin-right: -10000px;
 	margin-top: 43px;
@@ -245,7 +245,7 @@
 	margin-left: 180px;
 }
 
-#U464_animation
+#U523_animation
 {
 	width: 220px;
 	height: 390px;
@@ -374,9 +374,9 @@
 	width: 380px;
 	min-height: 110px;
 	background-color: transparent;
+	line-height: 43px;
 	color: #000000;
 	font-size: 36px;
-	line-height: 43px;
 	font-family: '__Textbook New_5';
 	font-weight: 400;
 	margin-left: 100px;
